packages/cashc/test/compiler/ParseError/invalid_date.cash
pragma cashscript >=0.8.0;

contract Test() {
    function test() {
        int d = date("not a date");
        require(d == 0);
    }
}
